--- a/src/components/DishCard.css
+++ b/src/components/DishCard.css
@@ -137,7 +137,8 @@
   line-height: 1.3;
   margin-bottom: 10px;
   flex: 1;
-  text-align: left;
+  text-align: left !important;
+  display: block;
 }
 
 .dish-ratings {
